frontend/src/components/ui/icon/icon.module.css
.icon-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: var(--size-icon, 20px);
  aspect-ratio: 1;
}
/*  стилизуем родителя при наличии кокретного ребенка */
.icon-container:has(.icon-interactive-disabled) {
  cursor: not-allowed;
}

/* .icon-container:has(.counter-container) {
  width: 32px;
} */

.icon {
  --active-color-icon: var(--color-primary, #15242a);
  --hover-color-icon: var(--color-accent, #67b0d1);
  --pressed-color-icon: var(--color-tertiary, #000);
  --current-color-icon: var(--active-color-icon, #15242a);
  width: 100%;
  height: 100%;
  background-color: var(--current-color-icon, #15242a);
  transition: background-color 0.3s ease;
  transform: scaleX(var(--turn, 1));
  -webkit-mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-image: var(--icon-url);
  mask-image: var(--icon-url);
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
}

.icon.icon-current-color {
  --current-color-icon: currentColor;
}

.icon-interactive {
  cursor: pointer;
}
.icon-interactive:hover {
  /*  переменная для ховер */
  --current-color-icon: var(--hover-color-icon, #67b0d1);
}

.icon-interactive:active {
  --current-color-icon: var(--pressed-color-icon, #000);
}

.icon-interactive-disabled {
  --current-color-icon: var(--color-primary-disabled, #848484);
  /* cursor: not-allowed; */
  pointer-events: none;
}

/*  если добавить scss можно это сделать через цикл ?ниже */
/*  пути иконок */
.close {
  --icon-url: url("../../../assets/icons/icon-close.svg");
}

/* иконка входа */

.come-in {
  --icon-url: url("../../../assets/icons/come-in.svg");
}
/* поиск*/
.search {
  --icon-url: url("../../../assets/icons/search.svg");
}
/* глобус */
.global {
  --icon-url: url("../../../assets/icons/global.svg");
}
/* чтение */
.read {
  --icon-url: url("../../../assets/icons/read.svg");
}
/* информация */
.info {
  --icon-url: url("../../../assets/icons/info.svg");
}

.clock {
  --icon-url: url("../../../assets/icons/clock.svg");
}

.cart {
  --icon-url: url("../../../assets/icons/cart.svg");
}

.heart {
  --icon-url: url("../../../assets/icons/heart.svg");
}

.full-heart {
  --icon-url: url("../../../assets/icons/full-heart.svg");
}

.location {
  --icon-url: url("../../../assets/icons/location.svg");
}

.cart {
  --icon-url: url("../../../assets/icons/cart.svg");
}

.profile {
  --icon-url: url("../../../assets/icons/profile.svg");
}
.home {
  --icon-url: url("../../../assets/icons/home.svg");
}

.youtube {
  --icon-url: url("../../../assets/icons/youtube.svg");
}

.facebook {
  --icon-url: url("../../../assets/icons/facebook.svg");
}

.instagram {
  --icon-url: url("../../../assets/icons/instagram.svg");
}

.mastercard {
  --icon-url: url("../../../assets/icons/mastercard.svg");
}

.visa {
  --icon-url: url("../../../assets/icons/visa.svg");
}

